# Brain_Tumor_Segmentation

./: README.md  app.py
backend/: app.py  pyproject.toml  requirements.txt
frontend/: index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: Header.tsx  HeroSection.tsx  ProcessingDashboard.tsx  UploadSection.tsx
frontend/src/pages/: Index.tsx
